[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/upgrade_shop.gd" id="1"]

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBox" type="VBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -150.0
offset_right = 340.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="Overlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
text = "UPGRADE SHOP"

[node name="ScoreDisplay" type="Label" parent="Overlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1.0, 0.4, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
text = "SCORE: 0"

[node name="CardContainer" type="HBoxContainer" parent="Overlay/VBox"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="ContinueButton" type="Button" parent="Overlay/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "CONTINUE"
